# interdimensional-bnb

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  env.example  main.py  manage.py  pyproject.toml
aws/: bucket-policy.json  cors.json  policy.json
bnb_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bnb_project/static/css/: style.css
bnb_project/templates/: base.html
bnb_project/templates/about/: about.html
bnb_project/templates/account/: login.html  signup.html
bnb_project/templates/booking/: booking.html  booking_confirmation.html
bnb_project/templates/home/: index.html
bnb_project/templates/login/: login.html
bnb_project/templates/profile/: booking_list.html  profile.html
bnb_project/templates/room_detail/: room_detail.html
bnb_project/templates/rooms/: browse_rooms.html  room_detail.html  room_list.html  rooms.html
bnb_project/templates/signup/: signup.html
rooms/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
rooms/migrations/: 0001_initial.py  0002_booking_adjusted_checkout_booking_adjusted_nights_and_more.py  0003_booking_guest.py  0004_room_is_collapsing.py  0005_room_image.py
