[project]
name = "interdimensional-bnb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "dj-database-url>=3.1.2",
    "django>=4.2,<4.3",
    "django-allauth>=65.14.3",
    "django-crispy-forms>=2.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
